# TENJIN

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.multi  README.en.md  README.md  docker-compose.preload.yml  docker-compose.yml  pyproject.toml
References/: Educational-theory-research.md
data/theories/: categories.json  relationships.json  theories.json  theorists.json
docs/: API_REFERENCE.md  DEPLOYMENT.md  DOCKER.ja.md  INSTALLATION_GUIDE.ja.md  USAGE_GUIDE.ja.md
docs/Qiita/: tenjin-graphrag-education-next-stage.md
scripts/: build-preloaded-image.sh  extract_theories.py  extracted_theories.json  generate_relationships.py  generate_theories.py  generate_theorists.py  init_data.sh  load_data.py
src/tenjin/: __init__.py
src/tenjin/application/: __init__.py
src/tenjin/domain/: __init__.py
src/tenjin/infrastructure/: __init__.py
steering/: product.ja.md  project.yml  structure.ja.md  tech.ja.md
storage/specs/: ADR-001-esperanto-llm-integration.md  ADR-002-hybrid-rag-architecture.md  ADR-003-clean-architecture.md  DESIGN-001-architecture.md  DESIGN-002-theory-editor.md  REQ-001-tenjin-education-graphrag.md  REQ-002-theory-editor.md  TASKS-001-implementation.md  TASKS-002-theory-editor.md
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_mcp_server_e2e.py
tests/integration/: __init__.py  test_data_loader.py  test_mcp_tools.py
tests/unit/: __init__.py  test_entities.py  test_inference_service.py  test_search_service.py  test_theory_service.py  test_value_objects.py
tools/theory-editor/: COMPLETION-REPORT.md  README.md  app.js  index.html  package.json  playwright.config.js  styles.css  sync-server.py  test.html  ws-sync-server.py
(+77 files in other folders)
